[gd_scene load_steps=2 format=3 uid="uid://bopcvb1efuv4a"]

[ext_resource type="Script" path="res://game_world.gd" id="1_rhjke"]

[node name="GameWorld" type="Node2D"]
script = ExtResource("1_rhjke")

[node name="UI" type="CanvasLayer" parent="."]

[node name="StatusPanel" type="Panel" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_bottom = 100.0
grow_horizontal = 0

[node name="PlayerInfo" type="Label" parent="UI/StatusPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Conectado como: Player
ID: 000000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatusLabel" type="Label" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1 